--- a/background.html
+++ b/background.html
@@ -132,10 +132,12 @@
 								<article>
 									<a href="https://www.linkedin.com/learning/certificates/196812d1878a75f0267669137f2e54d764b2711672f92109f622b847457e88a6?trk=share_certificate" class="image"><img src="images/pic61.jpg" alt="" class="uniform-height" /></a>
 									<h3>Six Sigma: Green Belt (PMI registered program)</h3>
+									<a href="https://drive.google.com/file/d/12AvwXMJQpwciW19yI7fWIgwbEhfp9QdR/view?usp=sharing" target="_blank">View My Notes</a>
 							</article>
 								<article>
 									<a href="https://www.linkedin.com/learning/certificates/068616f7e4bf6c8d6bc3b28a590c7b57eb56a49c0970917cd80fca5feec7d390?trk=share_certificate" class="image"><img src="images/pic30.jpg" alt="" class="uniform-height" /></a>
 									<h3>Six Sigma Foundations (PMI registered program)</h3>
+									<a href="https://drive.google.com/file/d/1cDfyW0_mfeMQHVBuF7V7EwipnlWnTfdD/view?usp=sharing" target="_blank">View My Notes</a>
 							</article>
 							<article>
 								<a href="https://www.linkedin.com/learning/certificates/23a7985000381ce1ba5c2695346fefc388b34a0baed1d0454580e2fdbe495038?trk=share_certificate" class="image"><img src="images/pic37.jpg" alt="" class="uniform-height" /></a>
