--- a/blockchain.html
+++ b/blockchain.html
@@ -41,7 +41,7 @@
 									<hr class="major" />
 
 									<h2>Literature review</h2>
-									<p class="large-text-2">My project journey begins with a comprehensive literature review. This review aims to provide a snapshot of the current state of research in the field of blockchain technology as it applies to supply chain management. Mobile viewers can access the literature review through <strong><a href="https://docs.google.com/document/d/1rnw6iBhT1Z_KcM6DRecLTq4yTPa1NtZzLkvDWpcW9kE/edit?usp=sharing" target="_blank">HERE</a></strong>.</p>
+									<p class="large-text-2">My project journey begins with a comprehensive literature review. This review aims to provide a snapshot of the current state of research in the field of blockchain technology as it applies to supply chain management. Mobile viewers can access the literature review through <strong><a href="https://drive.google.com/file/d/1oDOi_vZZXihVELsdLHPd1FvqKohQsVcy/view?usp=sharing" target="_blank">HERE</a></strong>.</p>
 
 										<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Lit Review.pdf" class="responsive-iframe"></iframe>
 
@@ -49,7 +49,7 @@
 									<hr class="major" />
 
 									<h2>White paper</h2>
-									<p class="large-text-2">Building upon the insights gained from the literature review, I developed a white paper that delves deeper into the practical applications and implications of blockchain technology in supply chains. Mobile viewers can access the white paper through <strong><a href="https://docs.google.com/document/d/1RBB0QEog92PKjerPEQivHJ6g8ZeN3JfR4v2ez_q2QmM/edit?usp=sharing" target="_blank">HERE</a></strong>.</p>
+									<p class="large-text-2">Building upon the insights gained from the literature review, I developed a white paper that delves deeper into the practical applications and implications of blockchain technology in supply chains. Mobile viewers can access the white paper through <strong><a href="https://drive.google.com/file/d/1EpQguV8nrgR3fDnRYjwrp9uMO4ukHacm/view?usp=sharing" target="_blank">HERE</a></strong>.</p>
 
 									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain White Paper.pdf" class="responsive-iframe"></iframe>
 									
@@ -69,7 +69,7 @@
 									<hr class="major" />
 
 									<h2>Professional presentation</h2>
-									<p class="large-text-2">In addition to these written components, I presented my findings in an in-person presentation. The experience of presenting my work to a large setting helped refine my understanding and communicate the significance of blockchain technology in supply chain management effectively.Mobile viewers can access the presentation deck through <strong><a href="https://www.canva.com/design/DAFmCJfVj6I/tAJvOxSe1iHOp1_AOFK6Hw/edit?utm_content=DAFmCJfVj6I&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">HERE</a></strong>. </p>
+									<p class="large-text-2">In addition to these written components, I presented my findings in an in-person presentation. The experience of presenting my work to a large setting helped refine my understanding and communicate the significance of blockchain technology in supply chain management effectively.Mobile viewers can access the presentation deck through <strong><a href="https://drive.google.com/file/d/1dieENnSPTWIjYjo6FxoMxWYNV0mp4vSH/view?usp=sharing" target="_blank">HERE</a></strong>. </p>
 
 									<iframe src="https://cindysh10012.github.io/cindy10012.github.io/Blockchain Presentation.pdf" class="responsive-iframe"></iframe>
 								</section>
